# sockets-cpp

./: .clang-format  .clang-tidy  .clang-tidy-ignore  .gitignore  .travis.yml  CMakeLists.txt  README.md  build.sh  vcpkg.json
.gitea/workflows/: ci.yml
.github/workflows/: ci.yml
CMake/: CodeCoverage.cmake
ci/: asan.yml  build.sh  clang14.yml  clang14rel.yml  clang16.yml  clang16rel.yml  gcc1030.yml  gcc1111.yml  gcc1130.yml  gcc1221.yml  gcc1230.yml  gcc1311.yml  gcc1311rel.yml  gcc840.yml  gcc940.yml  pipeline.yml  tsan.yml  ubsan.yml
examples/: CMakeLists.txt  clientApp.cpp  getopt.cpp  mcastApp.cpp  serverApp.cpp  unicastApp.cpp
include/sockets-cpp/: AddrLookup.h  ISocket.h  SocketCommon.h  SocketCore.h  TcpClient.h  TcpServer.h  UdpMcast.h  UdpSocket.h
src/: AddrLookup.cpp  AddrLookup.h  CMakeLists.txt  ISocket.cpp  TcpClient.cpp  TcpServer.cpp  UdpMcast.cpp  UdpSocket.cpp
test/: CMakeLists.txt  MockSocketCore.h  UdpTester.cpp  UdpTester.h  main.cpp  test_AddrLookup.cpp  test_Multicast.cpp  test_TcpClient.cpp  test_TcpServer.cpp  test_UdpSocket.cpp  test_Unicast.cpp
